BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Expense_Type_vod__c.object
<CustomObject>
    <description>Defines expense types.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to activate or deactivate expense types. In the UI, Veeva lookup fields to expense types will prevent the user from selecting inactive expense types.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country that the expense type applies to. Can be used to establish user visibility to the expense types used in their country.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Expense Types</relationshipLabel>
        <relationshipName>Expense_Types_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Code_vod__c</fullName>
        <description>Expense Code. This field should be used for expense reporting because the same expense type in different languages can be associated by having the same code.</description>
        <label>Expense Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Identifier_vod__c</fullName>
        <description>Used in the UI to help end users identify the correct expense type. This field should be populated by an admin, and be read-only to end users.</description>
        <label>Expense Type Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Included_In_Speaker_Cap_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, any expense of this type that is associated with a speaker will automatically count toward that speaker&apos;s cap.</description>
        <label>Included In Speaker Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Expense_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify which expense types are included in meal cost calculations.</description>
        <label>Meal Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Expense_Type_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Expense Type is used to establish relationships between expense types and expense sub-types</description>
        <label>Parent Expense Type</label>
        <referenceTo>Expense_Type_vod__c</referenceTo>
        <relationshipLabel>Expense Sub-Types</relationshipLabel>
        <relationshipName>Parent_Expense_Type_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Expense_Type_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Country_vod__c</columns>
        <columns>Expense_Code_vod__c</columns>
        <columns>Expense_Type_Identifier_vod__c</columns>
        <columns>Included_In_Speaker_Cap_vod__c</columns>
        <columns>Meal_Expense_vod__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Expense_Types</fullName>
        <columns>NAME</columns>
        <columns>Parent_Expense_Type_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Country_vod__c</columns>
        <columns>Expense_Code_vod__c</columns>
        <columns>Expense_Type_Identifier_vod__c</columns>
        <columns>Included_In_Speaker_Cap_vod__c</columns>
        <columns>Meal_Expense_vod__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_vod__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Expense Types</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Types</pluralLabel>
    <recordTypes>
        <fullName>Expense_Type_vod</fullName>
        <active>true</active>
        <description>Used for top-level expense types</description>
        <label>Expense_Category_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>